添加 招聘和会员单位后台

--- a/shtyxh-manager/WebContent/WEB-INF/view/admin/demo.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/admin/demo.html
@@ -47,6 +47,11 @@
 	<script src="${base.contextPath}/lib/extjs/myExt/QuestionSurvey/item/item/chartEmpty.js"></script>
 	<script src="${base.contextPath}/lib/extjs/build/packages/ext-charts/build/ext-charts.js"></script>
 	
+	<!-- 会员 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/Offers/Offers.js"></script>
+	<script src="${base.contextPath}/lib/extjs/myExt/Offers/item/addorUpdateOffersWindow.js"></script>
+	
+	
 		<script type="text/javascript">
 				Array.prototype.in_array = function (element) { 
 				　　for (var i = 0; i < this.length; i++) { 
