--- a/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
@@ -112,8 +112,14 @@
 	<script src="${base.contextPath}/lib/extjs/myExt/ExpertAssessmentUserProcess/item/addorUpdateExpertAssessmentUserProcess.js"></script>
 	
 	<script src="${base.contextPath}/admin/getUserFunc"></script>
+	<!-- 会员 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/MemberUnits/MemberUnits.js"></script>
+	<script src="${base.contextPath}/lib/extjs/myExt/MemberUnits/item/addorUpdateMemberUnitsWindow.js"></script>
 	
-	
+	<!-- 招聘 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/Offers/Offers.js"></script>
+	<script src="${base.contextPath}/lib/extjs/myExt/Offers/item/addorUpdateOffersWindow.js"></script>
+
 	
 		<script type="text/javascript">
 				Array.prototype.in_array = function (element) { 
