1.添加协会架构图 2.添加历届理事 3.添加历史沿革 4.数据库文件

--- a/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
@@ -119,7 +119,18 @@
 	<!-- 招聘 -->
 	<script src="${base.contextPath}/lib/extjs/myExt/Offers/Offers.js"></script>
 	<script src="${base.contextPath}/lib/extjs/myExt/Offers/item/addorUpdateOffersWindow.js"></script>
+	
+	<!-- 历史沿革 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/History/History.js"></script>
+	<script src="${base.contextPath}/lib/extjs/myExt/History/item/addorUpdateHistoryWindow.js"></script>
 
+	<!-- 协会架构图 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/CompanyFramework/CompanyFramework.js"></script>
+	
+	<!-- 协会架构图 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/CompanyFramework/CompanyFramework.js"></script>
+	<!-- 历届理事 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/CompanyDirector/CompanyDirector.js"></script>
 	
 		<script type="text/javascript">
 				Array.prototype.in_array = function (element) { 
