--- a/shtyxh-manager/WebContent/WEB-INF/view/admin/demo.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/admin/demo.html
@@ -47,9 +47,9 @@
 	<script src="${base.contextPath}/lib/extjs/myExt/QuestionSurvey/item/item/chartEmpty.js"></script>
 	<script src="${base.contextPath}/lib/extjs/build/packages/ext-charts/build/ext-charts.js"></script>
 	
-	<!-- 会员 -->
-	<script src="${base.contextPath}/lib/extjs/myExt/Offers/Offers.js"></script>
-	<script src="${base.contextPath}/lib/extjs/myExt/Offers/item/addorUpdateOffersWindow.js"></script>
+	<!-- 历史沿革 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/History/History.js"></script>
+	<script src="${base.contextPath}/lib/extjs/myExt/History/item/addorUpdateHistoryWindow.js"></script>
 	
 	
 		<script type="text/javascript">
