1.新增协会概况内容 2.修改后台type 3.删除老的newstype和introduction

--- a/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
@@ -76,7 +76,7 @@
         <div class="v4incheadertop_nav">
             <ul class="v4incheadertop_nav_ls">
               	<li  id="ch_index" <#if chanel =='CH_INDEX'> class="actv" </#if>><a href="${base.contextPath}" >首页</a></li> <!-- class="fst"-->
-                <li id="ch_xhjj" <#if chanel =='CH_XHJJ'> class="actv" </#if>><a href="${base.contextPath}/index/about" >协会简介</a></li>
+                <li id="ch_xhjj" <#if chanel =='CH_XHJJ'> class="actv" </#if>><a href="${base.contextPath}/index/associationSurvey/associationSurveyTypeList" >协会概况</a></li>
                 <li id="ch_zxzx" <#if chanel =='CH_ZXZX'> class="actv" </#if>><a href="${base.contextPath}/index/news" >资讯中心</a>
                 <ul>
                 	<#list kgNewstypeList as typeList>   
