--- a/shtyxh-manager/WebContent/WEB-INF/view/index/contact/contact.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/contact/contact.html
@@ -22,7 +22,7 @@
 .banner .inf h4{display:block;height:50px;line-height:50px;font-size:36px;}
 .banner .inf h3{display:block;height:80px;line-height:80px;}
 
-.title h3{font-size:40px;color:black;text-align:center;padding:10px 0;}
+.title_black h3{font-size:40px;color:black;text-align:center;padding:10px 0;}
 .title_white h3{color:#fff;}
 .title_black{color:#;}
 
