--- a/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
@@ -76,21 +76,29 @@
         <div class="v4incheadertop_nav">
             <ul class="v4incheadertop_nav_ls">
               	<li  id="ch_index" <#if chanel =='CH_INDEX'> class="actv" </#if>><a href="${base.contextPath}" >首页</a></li> <!-- class="fst"-->
-                <li id="ch_xhjj" <#if chanel =='CH_XHJJ'> class="actv" </#if>><a href="${base.contextPath}/index/associationSurvey/associationSurveyTypeList" >协会概况</a></li>
+                <li id="ch_xhgk" <#if chanel =='CH_XHGK'> class="actv" </#if>><a href="${base.contextPath}/index/associationSurvey/associationSurveyTypeList" >协会概况</a>
+                  <ul>
+                	<#list xhgkTypeList as typeList>   
+							<li><a href="${base.contextPath}/index/associationSurvey/associationSurveyTypeList?typeid=${typeList.id}">${typeList.typename}</a></li> 
+					</#list>
+                  </ul>
+                </li>
                 <li id="ch_zxzx" <#if chanel =='CH_ZXZX'> class="actv" </#if>><a href="${base.contextPath}/index/news" >资讯中心</a>
                 <ul>
-                	<#list kgNewstypeList as typeList>   
+                	<#list zxzxTypeList as typeList>   
 							<li><a href="${base.contextPath}/index/newsTypeList?typeid=${typeList.id}">${typeList.typename}</a></li> 
 					</#list>
 					
                 </ul>
                 </li>
-                <li id="ch_xhgz" <#if chanel =='CH_XHGZ'> class="actv" </#if>><a href="${base.contextPath}/index/assessmentTypeList" >评选评估</a>
+                <li id="ch_pxyjd" <#if chanel =='CH_PXYJD'> class="actv" </#if>><a href="${base.contextPath}/index/assessmentTypeList" >培训与鉴定</a>
 <!--                 <ul> -->
 <!--                		 <li><a href="${base.contextPath}/index/assessmentTypeList">评选评估</a></li>  -->
 <!--                 </ul> -->
                 </li>
-                <li id="ch_lxwm" <#if chanel =='CH_LXWM'> class="actv" </#if>><a href="${base.contextPath}/index/contact" >联系我们</a></li>
+                <li id="ch_dcyyj" <#if chanel =='CH_DCYYJ'> class="actv" </#if>><a href="#" >调查与研究</a></li>
+                 <li id="ch_xhdt" <#if chanel =='CH_XHDT'> class="actv" </#if>><a href="#" >协会动态</a></li>
+<!--                   <li id="ch_djhd" <#if chanel =='CH_DJHD'> class="actv" </#if>><a href="#" >党建活动</a></li> -->
             </ul>
         </div>
     </div>
