--- a/shtyxh-manager/WebContent/WEB-INF/view/error.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/error.html
@@ -1,59 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<style type="text/css">
-	<!--
-	a { color:#555}
-	html { height: 100%; width: 100%; background: url(${base.contextPath}/resources/images/500/bj.png) repeat; }
-	body {margin: 0px auto;}
-	.cw404 { width:755px; margin: 0px auto; }
-	.cw404_nr { height: 284px; width: 750px; background: #e5e5e5; border: 1px solid #aaaaaa; margin: 0px auto; }
-	.cw404_top { height: 200px; width: 750px; margin: 0px auto; }
-	.top_left { float: left; height: 150px; width: 150px; }
-	.top_right { font-size: 100px; line-height: 150px; text-align: center; float: left; height: 150px; width: 600px; color: #3f8bc7; font-family: "微软雅黑"; font-weight: bold; }
-	.nr_top { font-size: 25px; line-height: 40px; height: 40px; margin-right: 5px; margin-left: 5px; border-bottom: 1px solid #aaaaaa; text-align: center; font-weight: bold; color: #555555; }
-	.nr_min { height: 200px; border-top: 1px solid #FFFFFF; margin-right: 5px; margin-left: 5px; border-bottom: 1px solid #aaaaaa; }
-	.nr_foot { font-size: 12px; line-height: 40px; background: #eaeaea; height: 40px; border-top: 1px solid #FFFFFF; color: #555; margin-right: 5px; margin-left: 5px; }
-	.min_top { font-size: 14px; line-height: 30px; height: 30px; }
-	.min_choose { height: 30px; width: 100px; border: 1px solid #aaa; font-size: 12px; line-height: 30px; text-align: center; background: #eaeaea; }
-	.else { height: 30px;  }
-	.else li{ width:100px; float:left; margin-left:10px; font-size:12px; line-height:30px; display:inline}
-	a:link { text-decoration: none; }
-	a:visited { text-decoration: none; }
-	a:hover { text-decoration: none; }
-	a:active { text-decoration: none; }
-	-->
-</style>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="/r/cms/eng/eng/css/layout.css" rel="stylesheet" type="text/css"/>
+<title>页面发送异常 </title>
 </head>
 <body>
-<div class="cw404">
-  <div class="cw404_top">
-    <div class="top_left"></div>
-    
-    <div class="top_right"></div>
-  </div>
-  <div class="cw404_nr">
-    <div class="nr_top">发生错误</div>
-    
-    <div class="nr_min">
-      <div class="min_top"></div>
-      
-      <div class="min_choose">
-      	<a href="#" onClick="javascript:history.back(-1);">返回上一页</a>
-      </div>
-      
-      <div class="min_top">错误信息</div>
-
-      <div class="else">
-      	<li>${message!''}</li>
-      </div>
-      
-      
-      
-    </div>
-    
-    <div class="nr_foot"></div>
-  </div>
+<div class="prompt">
+  <dl>
+    <dt></dt>
+    <dd class="msg">您要查看的页面发生异常，请尝试以下操作：</dd>
+    <dd>1、如果您已经在地址栏中输入该网页的地址，请确认其拼写正确。</dd>
+    <dd>2、单击 <a href="javascript:history.back(1)">后退</a> 按钮，尝试其他链接。</dd>
+    <dd>3、打开 <a href="${base.contextPath}">网站主页</a>，然后查找指向您感兴趣信息的链接。</dd>
+  </dl>
 </div>
 </body>
 </html>
