--- a/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
@@ -97,7 +97,7 @@
 <!--                 </ul> -->
                 </li>
                 <li id="ch_dcyyj" <#if chanel =='CH_DCYYJ'> class="actv" </#if>><a href="#" >调查与研究</a></li>
-                 <li id="ch_xhdt" <#if chanel =='CH_XHDT'> class="actv" </#if>><a href="#" >协会动态</a></li>
+                 <li id="ch_xhdt" <#if chanel =='CH_XHDT'> class="actv" </#if>><a href="${base.contextPath}/index/xhdt" >协会动态</a></li>
 <!--                   <li id="ch_djhd" <#if chanel =='CH_DJHD'> class="actv" </#if>><a href="#" >党建活动</a></li> -->
             </ul>
         </div>
