--- a/shtyxh-manager/WebContent/WEB-INF/view/500.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/500.html
@@ -17,7 +17,7 @@
 	.min_top { font-size: 14px; line-height: 30px; height: 30px; }
 	.min_choose { height: 30px; width: 100px; border: 1px solid #aaa; font-size: 12px; line-height: 30px; text-align: center; background: #eaeaea; }
 	.else { height: 30px;  }
-	.else li{ width:100px; float:left; margin-left:10px; font-size:12px; line-height:30px; display:inline}
+	.else li{ width:100%; float:left; margin-left:10px; font-size:12px; line-height:30px; display:inline}
 	a:link { text-decoration: none; }
 	a:visited { text-decoration: none; }
 	a:hover { text-decoration: none; }
