--- a/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
@@ -86,7 +86,7 @@
                 <li id="ch_zxzx" <#if chanel =='CH_ZXZX'> class="actv" </#if>><a href="${base.contextPath}/index/news" >资讯中心</a>
                 <ul>
                 	<#list zxzxTypeList as typeList>   
-							<li><a href="${base.contextPath}/index/newsTypeList?typeid=${typeList.id}">${typeList.typename}</a></li> 
+							<li><a href="${base.contextPath}/index/news/typeList?typeid=${typeList.id}">${typeList.typename}</a></li> 
 					</#list>
 					
                 </ul>
