--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamicsNewsDetail.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamicsNewsDetail.html
@@ -51,7 +51,7 @@
     <div class="vF_detail_relcontent_lst">
         <ul class="c_list_tat">
 					<#list linkNewsList as linkNewsList>
-						<li><a href="${base.contextPath}/index/newsDetail?id=${linkNewsList.id}" target="_blank" title="${linkNewsList.newstitle}">${linkNewsList.newsSimpleTitle}</a></li>
+						<li><a href="${base.contextPath}/index/xhdt/newsDetail?id=${linkNewsList.id}" target="_blank" title="${linkNewsList.newstitle}">${linkNewsList.newsSimpleTitle}</a></li>
 					</#list>
         </ul>
     </div>
@@ -73,7 +73,7 @@
                 <div class="vT-chs-section-content-con">
                 <ul class="vT-chs-section-content-list mb10">
                 	<#list rightAttributeList.newsList as newsList>
-                		<li><a href="${base.contextPath}/index/newsDetail?id=${newsList.id}" target="_blank" title="${newsList.newstitle}">${newsList.newsSimpleTitle}</a></li>
+                		<li><a href="${base.contextPath}/index/xhdt/newsDetail?id=${newsList.id}" target="_blank" title="${newsList.newstitle}">${newsList.newsSimpleTitle}</a></li>
                 	</#list>
 				 </ul>
                 </div>
@@ -84,7 +84,7 @@
                 <div class="vT-chs-section-content-con">
                 <ul class="vT-chs-section-content-list mb10">
 					<#list rightAttributeList.newsList as newsList>
-						<li><a href="${base.contextPath}/index/newsDetail?id=${newsList.id}"  target="_blank" title="${newsList.newstitle}">${newsList.newsSimpleTitle}</a></li>
+						<li><a href="${base.contextPath}/index/xhdt/newsDetail?id=${newsList.id}"  target="_blank" title="${newsList.newstitle}">${newsList.newsSimpleTitle}</a></li>
 					</#list>
                 </ul>
                 </div>
