--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamicsTypeList.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamicsTypeList.html
@@ -77,7 +77,7 @@
                 <div class="vT-chs-section-content-con">
                 <ul class="vT-chs-section-content-list mb10">
                 	<#list rightAttributeList.newsList as newsList>
-                		<li><a href="${base.contextPath}/index/newsDetail?id=${newsList.id}" target="_blank" title="${newsList.newstitle}">${newsList.newsSimpleTitle}</a></li>
+                		<li><a href="${base.contextPath}/index/xhdt/newsDetail?id=${newsList.id}" target="_blank" title="${newsList.newstitle}">${newsList.newsSimpleTitle}</a></li>
                 	</#list>
 				 </ul>
                 </div>
@@ -88,7 +88,7 @@
                 <div class="vT-chs-section-content-con">
                 <ul class="vT-chs-section-content-list mb10">
 					<#list rightAttributeList.newsList as newsList>
-						<li><a href="${base.contextPath}/index/newsDetail?id=${newsList.id}"  target="_blank" title="${newsList.newstitle}">${newsList.newsSimpleTitle}</a></li>
+						<li><a href="${base.contextPath}/index/xhdt/newsDetail?id=${newsList.id}"  target="_blank" title="${newsList.newstitle}">${newsList.newsSimpleTitle}</a></li>
 					</#list>
                 </ul>
                 </div>
