--- a/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
@@ -169,7 +169,7 @@
 					<div class="banner_block ">
 						<div class="vF_banner bx_log">
 							<p class="ml92 dlzc">
-								<a href="${base.contextPath}/index/newsSearch">内容检索</a>
+								<a href="${base.contextPath}/index/news/search">内容检索</a>
 							</p>
 							<p class="ml67 dlzc"></p>
 							<p class="ml92 dlzc"></p>
