--- a/shtyxh-manager/WebContent/WEB-INF/view/index/news/newsSearch.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/news/newsSearch.html
@@ -195,7 +195,7 @@
 						
 						<#list newsList as news>   
 								    <li>
-										<a href="${base.contextPath}/index/newsDetail?id=${news.id}" target="_blank">
+										<a href="${base.contextPath}/index/news/newsDetail?id=${news.id}" target="_blank">
 											${news.newstitle}
 										</a>
 										<span style="text-align:center">${news.kgNewstype.typename}</span>
