--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamics.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamics.html
@@ -5,7 +5,7 @@
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
-<title>资讯中心_${webname}</title>
+<title>协会动态_${webname}</title>
 <link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/channel.css"
 	rel="stylesheet" type="text/css" />
