--- a/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
@@ -66,7 +66,7 @@ $(document).ready(function(){
 
 
 <div class="main_topic_block mt13">
-<form name="searchForm" id="searchForm" action="newsSearch" method="post">
+<form name="searchForm" id="searchForm" action="${base.contextPath}/index/news/search" method="post">
 <input type="hidden" name="page_index" id="page_index" value="1" />
 <style>
 #vT_bidSearch_o {width:1000px;}
